Opened 2 years ago
Closed 2 years ago
#11151 closed defect (fixed)
The av1 decoding results of ffmpeg+vaapi output and software libdav1 output are inconsistent
| Reported by: | Zhaoliang | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | undetermined |
| Version: | git-master | Keywords: | |
| Cc: | Hirokazu Honda | Blocked By: | |
| Blocking: | Reproduced by developer: | no | |
| Analyzed by developer: | no |
Description
with the latest ffmpeg+vaapi decoder, the decoding result of av1 bitstream is not aligned with ffmpeg dav1d decoder.
The test bitstream is in https://code.videolan.org/videolan/dav1d-test-data/-/blob/0b1ae65ec0c949bb1aac496d1b3f8bde5ffb10b8/8-bit/issues/48_delayed.ivf. And the first mismatching frame is 121
How to reproduce:
First build ffmpeg with vaapi and libdav1d support. $ffmpeg -vaapi_device /dev/dri/renderD128 -hwaccel vaapi -i 48_delayed_20201006.ivf -f segment -segment_time 0.01 -frames 557 -pix_fmt yuv420p output_%04d.yuv $md5sum output_0121.yuv $ffmpeg -i 48_delayed_20201006.ivf -f segment -segment_time 0.01 -frames 557 -pix_fmt yuv420p output_%04d.yuv $md5sum output_0121.yuv ffmpeg version built on N-116752-g507c2a5774 (c) 2000-2024 the FFmpeg developers
Patches should be submitted to the ffmpeg-devel mailing list and not this bug tracker.
Change History (4)
comment:1 by , 2 years ago
| Cc: | added |
|---|
comment:2 by , 2 years ago
comment:3 by , 2 years ago
Hi Fei, thanks for the fix! I have verified this patch and it works well to resolve the issue! :)
comment:4 by , 2 years ago
| Resolution: | → fixed |
|---|---|
| Status: | new → closed |
Patch applied to master, close this ticket. Thanks.
Note:
See TracTickets
for help on using tickets.



Fixed patch submitted to https://patchwork.ffmpeg.org/project/ffmpeg/list/?series=12747. Please have a try.